# vent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: build-push.yaml  lint-test.yaml  pre-commit.yaml  test.yaml
src/vent/: __main__.py
